docs: session handoff for tomorrow — fix client model rendering
The model rendering issue is likely Container data not being decompressed
in checkReceived() before loadModelHeader() parses it. Quick fix outlined.