@@ -1,46 +1,82 @@
-# OpenRune Session Handoff — 2026-03-25 (Session 5)
-# Cache Upgrade: Rev 232 dat2 — Server + Client
+# OpenRune Session Handoff — 2026-03-26 (Tomorrow)
+# Priority: Fix Client Model Rendering
 
-## Summary
-Both server and client now load from the rev 232 dat2 cache. Server fully works. Client logs in, communicates, renders UI, but the 3D world has yellow triangle artifacts from model format issues.
+## Context
+The rev 232 dat2 cache upgrade is complete on both server and client. Server works perfectly. Client logs in and communicates but the 3D world renders with yellow triangle artifacts because OSRS models aren't being decompressed correctly.
 
-## Server: FULLY WORKING
-- 12,293 NPCs, 31,172 items, 21,391 objects from dat2
-- 4.3M object placements from 2,266 XTEA-decrypted regions
-- Map loading via djb2 name hash → reference table lookup
+## The Problem
 
-## Client: PARTIALLY WORKING
-- Login, server comms, UI, minimap all work
-- 14,793 NPCs / 31,172 items / 57,690 objects loaded from dat2
-- 2,383 map regions mapped via dat2 reference table
-- 2,266 XTEA keys loaded for map decryption
-- OSRS model format detection (FF FF/FE/FD magic bytes)
-- Legacy 317 cache used for sprites, interfaces, fonts, animations
+Model ID 2403 loads as 255 bytes but claims 3846 vertices — the data is **still Container-wrapped** (compression header included in the model bytes). The `ContainerDecompressor.decompress()` in `OnDemandFetcher.getNextNode()` works for some models but not all.
 
-### Remaining Issue: Yellow Triangle Models
-- Some OSRS models have garbage vertex/face counts (e.g., 3846 verts in 255 bytes)
-- Root cause: models from idx7 may need Container decompression at a different layer, or the index mapping is wrong
-- The `read525Model`/`read622Model` parsers handle OSRS format but some data is truncated
-- Need to investigate: is `decompressors[1]` (mapped to idx7) returning complete model containers?
+**Likely cause:** The `checkReceived()` method at `OnDemandFetcher.java:505` reads model data from `decompressors[dataType + 1].decompress(id)` — this returns raw sector-chained bytes from the dat2 cache. For dat2, these bytes ARE a Container (compression header + compressed data). But `loadModelHeader()` is called with this data BEFORE `getNextNode()` decompresses it.
 
-### Files Changed (Client)
+**The fix:** Container decompression needs to happen in `checkReceived()` (where data is first read from cache), NOT in `getNextNode()` (which runs later). Or `loadModelHeader` needs to decompress the container itself.
+
+## Quick Investigation Steps
+
+1. Add a print in `checkReceived()` to see if model data first bytes are `[0, ...]` (no compression), `[1, ...]` (bzip2), or `[2, ...]` (gzip) — Container format markers
+2. If they ARE container-wrapped, add `ContainerDecompressor.decompress()` call in `checkReceived()` before setting `onDemandData.buffer`
+3. Test: models should now have correct sizes and render properly
+
+## What Works
+
+| Component | Status |
+|-----------|--------|
+| Server dat2 cache | FULLY WORKING — 12K NPCs, 31K items, 4.3M placements |
+| Client login/comms | Working — logs in, NPC spawns, chat |
+| Client UI | Working — tabs, minimap, inventory |
+| Client definitions | Working — 14K NPCs, 31K items, 57K objects from dat2 |
+| Client map loading | Working — 2,383 regions mapped via djb2 ref table |
+| Client XTEA keys | Working — 2,266 keys loaded |
+| Client model rendering | BROKEN — yellow triangles, truncated model data |
+| Client terrain | Partially working — some tiles render, XTEA-encrypted regions missing |
+| Sprites/interfaces | Working — loaded from legacy 317 cache |
+
+## Key Architectural Notes
+
+- **Server cache path:** `~/.openrune/cache-232/cache/` (auto-detected by Server.kt)
+- **Client cache path:** Signlink.getCacheDataDirectory() → dat2 location for dat/idx files
+- **Legacy cache:** `~/.openrune/cache/` still needed for sprites, interfaces, fonts
+- **Decompressor mapping:** `[1]=idx7 models, [2]=idx0 anims, [3]=idx4 sounds, [4]=idx5 maps, [5]=idx2 configs, [25]=idx255 meta`
+- **Backup:** `~/.openrune/cache-194-backup.tar`
+
+## Build Commands
+```bash
+# Server
+cd Open-Rune
+gradlew build -x test && gradlew :core:run
+
+# Client
+cd Open-Rune/client
+find src -name "*.java" > /tmp/sources.txt
+javac -d bin -cp "lib/*" @/tmp/sources.txt
+java -XX:-OmitStackTraceInFastThrow \
+  --add-opens java.base/java.lang=ALL-UNNAMED \
+  --add-opens java.base/java.lang.reflect=ALL-UNNAMED \
+  --add-opens java.base/java.io=ALL-UNNAMED \
+  --add-opens java.base/java.util=ALL-UNNAMED \
+  --add-opens java.base/java.text=ALL-UNNAMED \
+  --add-opens java.base/java.math=ALL-UNNAMED \
+  --add-opens java.base/java.net=ALL-UNNAMED \
+  --add-opens java.desktop/java.awt=ALL-UNNAMED \
+  --add-opens java.desktop/java.awt.font=ALL-UNNAMED \
+  --add-opens java.desktop/java.awt.color=ALL-UNNAMED \
+  --add-opens java.desktop/java.awt.event=ALL-UNNAMED \
+  --add-opens java.desktop/java.awt.image=ALL-UNNAMED \
+  --add-opens java.desktop/sun.awt=ALL-UNNAMED \
+  --add-opens java.desktop/sun.awt.image=ALL-UNNAMED \
+  --add-opens java.desktop/sun.java2d=ALL-UNNAMED \
+  --add-opens java.desktop/javax.swing=ALL-UNNAMED \
+  -cp "bin;lib/*" com.client.Client
+
+# Verify dat2 cache
+gradlew :cache:verifyCacheDat2
 ```
-Signlink.java          — isDat2, getCacheDataDirectory()
-Decompressor.java      — extended sector headers
-ContainerDecompressor.java — NEW: dat2 container decompression + XTEA
-Dat2ConfigLoader.java  — NEW: reference table + group splitting
-Buffer.java            — null-terminated strings
-Client.java            — index remapping, dat2 config, legacy fallback
-Model.java             — OSRS format detection, read525Model hasFaceRenderTypes fix, crash protection
-OnDemandFetcher.java   — Container decompress, XTEA keys, dat2 map index (djb2 ref table)
-ObjectManager.java     — try-catch on renderObject, lighting, AnimatedSceneObject
-ObjectDefinition.java  — dat2 loading, forID bounds, try-catch readValues
-ItemDefinition.java    — dat2 loading, forID bounds
-NpcDefinition.java     — dat2 loading, forID bounds
-```
 
-### Next Session: Fix Model Rendering
-1. Debug why model 2403 has 255 bytes but claims 3846 vertices
-2. Check if ContainerDecompressor output matches expected model sizes
-3. Verify idx7 → decompressors[1] mapping produces valid model containers
-4. May need to add Container decompression in `checkReceived()` before `loadModelHeader`
+## After Model Fix
+
+Once models render correctly:
+1. Generate doors.json from full 4.3M map dump (server has all data)
+2. Fix door close system using authoritative cache rotations
+3. Move remaining configs (animations, floors, identkits) to dat2
+4. Remove dependency on legacy 317 cache
